# chroma

./: Cargo.toml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: dependabot.yml
chromadb/: base_types.py
chromadb/api/: __init__.py  async_api.py  collection_configuration.py  rust.py  segment.py
clients/js/: package.json  pnpm-lock.yaml
docs/docs.trychroma.com/: package.json
examples/use_with/cohere/: package.json
go/: go.mod  go.sum
rust/benchmark/: Cargo.toml
rust/cache/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/client/: admin_client.rs
rust/cli/src/tui/collection_browser/: app.rs  lib.rs
rust/frontend/: Cargo.toml
rust/frontend/src/: config.rs  server.rs
rust/frontend/src/impls/: service_based_frontend.rs
rust/garbage_collector/: Cargo.toml
rust/index/: Cargo.toml
rust/load/src/: data_sets.rs
rust/mdac/: Cargo.toml
rust/memberlist/: Cargo.toml
rust/python_bindings/src/: bindings.rs
rust/storage/: Cargo.toml
rust/telemetry/: Cargo.toml
rust/telemetry/src/: client.rs  events.rs  posthog.rs
rust/tracing/: Cargo.toml
rust/types/: Cargo.toml
rust/worker/: Cargo.toml
