[package]
name = "chroma-benchmark"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
async-tempfile = "0.7.0"
async-compression = { version = "0.4.18", features = ["tokio", "gzip", "bzip2"] }

bincode = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tantivy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

dirs = "5.0.1"
reqwest = { workspace = true, features = ["stream"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = "0.7.14"
bloom = "0.3.2"

chroma-blockstore = { workspace = true }
chroma-cache = { workspace = true }
chroma-storage = { workspace = true }
chroma-types = { workspace = true }
worker = { workspace = true }
